# YieldCurve

./: .gitignore  README.md  pyproject.toml
yieldcurve/: __init__.py
yieldcurve/examples/: demo.ipynb
yieldcurve/loader/: __init__.py  fred_loader.py
yieldcurve/models/: __init__.py  nss.py  spline.py
yieldcurve/plots/: __init__.py  plot_curve.py
yieldcurve/utils/: __init__.py  conversions.py  metrics.py
