[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "yieldcurve-analysis"
version = "0.1.0"
description = "A Python package for downloading US Treasury yields from FRED, fitting yield curve models, and performing analysis"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Yield Curve Analysis Team"}
]
keywords = ["yield-curve", "treasury", "fred", "nelson-siegel", "spline", "fixed-income", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "matplotlib>=3.3.0",
    "requests>=2.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.urls]
Homepage = "https://github.com/sinhaarya04/YieldCurve"
Documentation = "https://github.com/sinhaarya04/YieldCurve#readme"
Repository = "https://github.com/sinhaarya04/YieldCurve"

[tool.setuptools]
packages = ["yieldcurve", "yieldcurve.loader", "yieldcurve.models", "yieldcurve.plots", "yieldcurve.utils", "yieldcurve.examples"]

[tool.setuptools.package-data]
yieldcurve = ["examples/*.ipynb"]

